# katib-client-rust

./: Cargo.toml  README.md  regen.bash
.openapi-generator/: FILES
docs/: V1beta1AlgorithmSetting.md  V1beta1AlgorithmSpec.md  V1beta1CollectorSpec.md  V1beta1ConfigMapSource.md  V1beta1EarlyStoppingRule.md  V1beta1EarlyStoppingSetting.md  V1beta1EarlyStoppingSpec.md  V1beta1Experiment.md  V1beta1ExperimentCondition.md  V1beta1ExperimentList.md  V1beta1ExperimentSpec.md  V1beta1ExperimentStatus.md  V1beta1FeasibleSpace.md  V1beta1FileSystemPath.md  V1beta1FilterSpec.md  V1beta1GraphConfig.md  V1beta1Metric.md  V1beta1MetricStrategy.md  V1beta1MetricsCollectorSpec.md  V1beta1NasConfig.md  V1beta1ObjectiveSpec.md  V1beta1Observation.md  V1beta1Operation.md  V1beta1OptimalTrial.md  V1beta1ParameterAssignment.md  V1beta1ParameterSpec.md  V1beta1SourceSpec.md  V1beta1Suggestion.md  V1beta1SuggestionCondition.md  V1beta1SuggestionList.md  V1beta1SuggestionSpec.md  V1beta1SuggestionStatus.md  V1beta1Trial.md  V1beta1TrialAssignment.md  V1beta1TrialCondition.md  V1beta1TrialList.md  V1beta1TrialParameterSpec.md  V1beta1TrialSource.md  V1beta1TrialSpec.md  V1beta1TrialStatus.md  (+1 more)
src/models/: _v1beta1_suggestion.rs  _v1beta1_suggestion_condition.rs  _v1beta1_suggestion_list.rs  _v1beta1_suggestion_spec.rs  _v1beta1_suggestion_status.rs  _v1beta1_trial.rs  _v1beta1_trial_assignment.rs  _v1beta1_trial_condition.rs  _v1beta1_trial_list.rs  _v1beta1_trial_spec.rs  _v1beta1_trial_status.rs  mod.rs  v1beta1_algorithm_setting.rs  v1beta1_algorithm_spec.rs  v1beta1_collector_spec.rs  (+27 more)
